# Design-Patterns

Creational/Factory Method/: CMakeLists.txt  main.cpp
Creational/Factory Method/include/: factory.hpp  vehicle.hpp
Creational/Factory Method/src/: factory.cpp
Creational/Factory Method/test/: factoryTest.cpp
Creational/Singleton/: CMakeLists.txt  README.md  main.cpp
Creational/Singleton/include/: singleton.hpp
Creational/Singleton/src/: singleton.cpp
Creational/Singleton/test/: singletonTest.cpp
